prost-reflect/tests/snapshots/main__name_conflict_package3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: dep.proto
    package: foo
  - name: root.proto
    package: foo
    dependency:
      - dep.proto

