prost-reflect/tests/snapshots/main__oneof_group_field.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    messageType:
      - name: Message
        field:
          - name: group
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_GROUP
            typeName: ".Message.Group"
            oneofIndex: 0
            jsonName: group
        nestedType:
          - name: Group
            field:
              - name: bar
                number: 1
                label: LABEL_REPEATED
                type: TYPE_FLOAT
                jsonName: bar
        oneofDecl:
          - name: oneof

