prost-reflect/tests/snapshots/main__option_resolution1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    dependency:
      - google/protobuf/descriptor.proto
    messageType:
      - name: Foo
        field:
          - name: a
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_INT32
            jsonName: a
          - name: b
            number: 2
            label: LABEL_OPTIONAL
            type: TYPE_INT32
            jsonName: b
    extension:
      - name: foo
        extendee: ".google.protobuf.FileOptions"
        number: 1001
        label: LABEL_OPTIONAL
        type: TYPE_MESSAGE
        typeName: ".Foo"
        jsonName: foo
    options:
      optimizeFor: SPEED
      "[foo]":
        a: 1
        b: 1

