prost-reflect/tests/snapshots/main__option_resolution11.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
file:
  - name: test.proto
    dependency:
      - google/protobuf/any.proto
      - google/protobuf/descriptor.proto
    messageType:
      - name: Foo
        field:
          - name: foo
            number: 1
            label: LABEL_OPTIONAL
            type: TYPE_STRING
            jsonName: foo
    extension:
      - name: a
        extendee: ".google.protobuf.FileOptions"
        number: 1001
        label: LABEL_REPEATED
        type: TYPE_MESSAGE
        typeName: ".google.protobuf.Any"
        jsonName: a
    options:
      "[a]":
        - "@type": type.googleapis.com/Foo
          foo: bar

